--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
   "module": "build/esm/index.js",
   "types": "build/types/index.d.ts",
   "dependencies": {
-    "@babel/runtime-corejs3": "^7.24.0",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@tradetrust-tt/tradetrust": "^6.9.0",
-    "crypto-browserify": "^3.12.0",
-    "debug": "^4.3.4",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@tradetrust-tt/tradetrust": "^6.10.0",
+    "@trustvc/trustvc": "^1.1.2",
+    "crypto-browserify": "^3.12.1",
+    "debug": "^4.4.0",
+    "os-browserify": "^0.3.0",
     "penpal": "^6.2.2",
     "penpal-v4": "npm:penpal@^4.1.1",
     "react-pdf": "^7.7.1",
     "stream-browserify": "^3.0.0",
-    "ts-jest": "^29.1.2",
+    "ts-jest": "^29.2.5",
     "typesafe-actions": "^5.1.0",
     "vm-browserify": "^1.1.2"
   },
@@ -48,30 +49,32 @@
     "react": ">=16.8.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.23.9",
-    "@babel/core": "^7.24.0",
-    "@babel/plugin-proposal-class-properties": "^7.16.0",
-    "@babel/plugin-transform-runtime": "^7.24.0",
-    "@babel/preset-env": "^7.24.0",
-    "@babel/preset-react": "^7.23.3",
-    "@babel/preset-typescript": "^7.23.3",
+    "@babel/cli": "^7.26.4",
+    "@babel/core": "^7.26.0",
+    "@babel/plugin-transform-class-properties": "^7.25.9",
+    "@babel/plugin-transform-private-methods": "^7.25.9",
+    "@babel/plugin-transform-runtime": "^7.25.9",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
     "@emotion/babel-preset-css-prop": "^11.11.0",
     "@storybook/addon-essentials": "^7.6.17",
     "@storybook/addon-mdx-gfm": "^7.6.17",
     "@storybook/blocks": "^7.6.17",
     "@storybook/react": "^7.6.17",
     "@storybook/react-webpack5": "^7.6.17",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
     "@types/debug": "4.1.12",
-    "@types/jest": "^29.5.12",
-    "@types/react": "^18.2.58",
-    "@types/react-dom": "^18.2.19",
+    "@types/jest": "^29.5.14",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "@types/react-pdf": "^6.2.0",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.5.0",
     "babel-jest": "^29.7.0",
-    "babel-loader": "^9.1.3",
+    "babel-loader": "^9.2.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
@@ -89,10 +92,10 @@
     "react-frame-component": "^5.2.6",
     "semantic-release": "^21.1.2",
     "storybook": "^7.6.17",
-    "typescript": "^5.3.3",
-    "webpack": "^5.90.3",
+    "typescript": "^5.7.2",
+    "webpack": "^5.97.1",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.2"
+    "webpack-dev-server": "^5.2.0"
   },
   "license": "Apache-2.0",
   "eslintConfig": {
