--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "jsx": "react-jsx",
     "jsxImportSource": "@emotion/react",
     "sourceMap": true,
-    "types": ["jest", "@emotion/react"],
+    "types": ["node",  "@emotion/react", "jest", "@testing-library/jest-dom"],
     "declaration": true,
     "isolatedModules": true
   },
