fix: package build (#14)
* fix: package build

* fix: lint

--- a/package.json
+++ b/package.json
@@ -183,6 +183,9 @@
           "jest/prefer-expect-assertions": "off"
         }
       }
+    ],
+    "ignorePatterns": [
+      "jest.setup.ts"
     ]
   },
   "prettier": {
