--- a/package.json
+++ b/package.json
@@ -196,6 +196,6 @@
     "url": "https://github.com/TradeTrust/decentralized-renderer-react-components.git"
   },
   "engines": {
-    "node": "18.x"
+    "node": ">=18.x"
   }
 }
