--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "os-browserify": "^0.3.0",
     "penpal": "^6.2.2",
     "penpal-v4": "npm:penpal@^4.1.1",
-    "react-pdf": "^7.7.1",
+    "react-pdf": "^7.7.3",
     "stream-browserify": "^3.0.0",
     "ts-jest": "^29.2.5",
     "typesafe-actions": "^5.1.0",
@@ -83,6 +83,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "3.2.5",
