--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tradetrust-tt/tradetrust": "^6.10.0",
-    "@trustvc/trustvc": "^1.1.3",
+    "@trustvc/trustvc": "^1.2.1",
     "crypto-browserify": "^3.12.1",
     "debug": "^4.4.0",
     "os-browserify": "^0.3.0",
@@ -55,14 +55,18 @@
     "@babel/plugin-transform-private-methods": "^7.25.9",
     "@babel/plugin-transform-runtime": "^7.25.9",
     "@babel/preset-env": "^7.26.0",
+    "@babel/preset-flow": "^7.25.9",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
     "@emotion/babel-preset-css-prop": "^11.11.0",
-    "@storybook/addon-essentials": "^7.6.17",
-    "@storybook/addon-mdx-gfm": "^7.6.17",
-    "@storybook/blocks": "^7.6.17",
-    "@storybook/react": "^7.6.17",
-    "@storybook/react-webpack5": "^7.6.17",
+    "@mattrglobal/node-bbs-signatures": "^0.20.0",
+    "@storybook/addon-essentials": "^8.5.1",
+    "@storybook/addon-mdx-gfm": "^8.5.1",
+    "@storybook/addon-webpack5-compiler-babel": "^3.0.5",
+    "@storybook/blocks": "^8.5.1",
+    "@storybook/react": "^8.5.1",
+    "@storybook/react-webpack5": "^8.5.1",
+    "@storybook/test": "^8.5.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
@@ -75,6 +79,7 @@
     "@typescript-eslint/parser": "^7.5.0",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.2.1",
+    "buffer": "^6.0.3",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
@@ -92,8 +97,8 @@
     "react-dom": "^18.2.0",
     "react-frame-component": "^5.2.6",
     "semantic-release": "^21.1.2",
-    "storybook": "^7.6.17",
-    "typescript": "^5.7.2",
+    "storybook": "^8.5.1",
+    "typescript": "^5.7.3",
     "webpack": "^5.97.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.2.0"
