--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@peculiar/webcrypto": "^1.5.0",
     "@tradetrust-tt/tradetrust": "^6.10.0",
-    "@trustvc/trustvc": "^1.5.3",
+    "@trustvc/trustvc": "^1.6.0-alpha.5",
     "crypto-browserify": "^3.12.1",
     "debug": "^4.4.0",
     "os-browserify": "^0.3.0",
