fix: pdf renderer error handling (#39)
* fix: pdfRenderer error handling

* fix: tests

* fix: console

* fix: add storybook for pdf rendere error

* chore: update trustvc version

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@peculiar/webcrypto": "^1.5.0",
     "@tradetrust-tt/tradetrust": "^6.10.0",
-    "@trustvc/trustvc": "^1.6.0-alpha.5",
+    "@trustvc/trustvc": "^2.0.0",
     "crypto-browserify": "^3.12.1",
     "debug": "^4.4.0",
     "os-browserify": "^0.3.0",
